Bug 151980 - Down arrow for dropdown content control for RTL fields should fall on the left
Summary: Down arrow for dropdown content control for RTL fields should fall on the left
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.5.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:7.5.0
Keywords:
Depends on:
Blocks: Form-Controls
  Show dependency treegraph
 
Reported: 2022-11-09 17:44 UTC by Hossein
Modified: 2022-11-11 13:12 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
RTL field in Word 2019 (24.00 KB, image/png)
2022-11-09 17:44 UTC, Hossein
Details
LTR field in Word 2019 (same document as above) (21.66 KB, image/png)
2022-11-09 17:47 UTC, Hossein
Details
Minimal RTL dropdown reproducer for testing. (48.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2022-11-10 09:38 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Hossein 2022-11-09 17:44:51 UTC
Created attachment 183503 [details]
RTL field in Word 2019

Description:
Open attachment 182846 [details] from tdf#151364 which is a DOCX file containing fields that can be changed using the dropdown menu. For the RTL fields, the down arrows should fall on the left.

Steps to Reproduce:
1- Open DOCX attachment
2- Click on a gray field in page 1

Actual Results:
The down arrow for dropdown content control for RTL fields are shown on the right, just like LTR fields

Expected Results:
The down arrow should fall on the left, as it is in MS Word.

Please note that this is not per-document, and it is per-field. If you go to the last page of the same file in MS Word, you will see that for the LTR fields, the down arrow falls on the right.


Reproducible: Always


User Profile Reset: No


Additional Info:

Reproducible on the latest LO 7.5 dev master, after tdf#151364 is fixed by Milkos: f726fbc2699b05199a8dec3055710a7131e0aad6

Version: 7.5.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: a0dec4bc9a48b263be182ad7bbe4ba3f8cbb27e1
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Hossein 2022-11-09 17:47:29 UTC
Created attachment 183504 [details]
LTR field in Word 2019 (same document as above)
Comment 2 Miklos Vajna 2022-11-10 09:33:22 UTC
Yes, I can confirm. Will take a look.
Comment 3 Miklos Vajna 2022-11-10 09:38:45 UTC
Created attachment 183516 [details]
Minimal RTL dropdown reproducer for testing.
Comment 4 Commit Notification 2022-11-11 12:04:11 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e716ed8687a4eb99d9e8e1480dd7bfb2c872df7f

tdf#151980 sw content controls: fix RTL render of dropdowns

It will be available in 7.5.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.