tdf#151980 sw content controls: fix RTL render of dropdowns

- check if this widget is meant to be RTL in
  SwSelPaintRects::HighlightContentControl()

- route RTLness to the underlying tree view / drop-down in
  SwDropDownContentControlButton::InitDropdown()

- fix up SwContentControlButton (positioning, rendering, hit testing) to
  assume the button on the left of the first text portion in the RTL
  case

Change-Id: I637ee8f08311e1273f8b19ddf3ab572af839760b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142577
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins