sw/source/core/crsr/contentcontrolbutton.cxx
@@ -71,6 +71,10 @@ void SwContentControlButton::CalcPosAndSize(const SwRect& rPortionPaintArea)
     m_aFramePixel = tools::Rectangle(aBoxPos, aBoxSize);
 
     // Then extend the size with the button area
+    if (m_bRTL)
+    {
+        aBoxPos.AdjustX(-GetParent()->LogicToPixel(rPortionPaintArea.SSize()).Height());
+    }
     aBoxSize.AdjustWidth(GetParent()->LogicToPixel(rPortionPaintArea.SSize()).Height());
 
     if (aBoxPos != GetPosPixel() || aBoxSize != GetSizePixel())
@@ -112,7 +116,14 @@ void SwContentControlButton::Paint(vcl::RenderContext& rRenderContext, const too
 
     // Draw the button next to the frame
     Point aButtonPos(aFrameRect.TopLeft());
-    aButtonPos.AdjustX(aFrameRect.GetSize().getWidth() - nPadding * 2);
+    if (m_bRTL)
+    {
+        aButtonPos.AdjustX(nPadding * 2);
+    }
+    else
+    {
+        aButtonPos.AdjustX(aFrameRect.GetSize().getWidth() - nPadding * 2);
+    }
     Size aButtonSize(aFrameRect.GetSize());
     aButtonSize.setWidth(GetSizePixel().getWidth() - aFrameRect.getOpenWidth() - nPadding);
     const tools::Rectangle aButtonRect(tools::Rectangle(aButtonPos, aButtonSize));
@@ -153,6 +164,11 @@ WindowHitTest SwContentControlButton::ImplHitTest(const Point& rFramePos)
         return aResult;
     else
     {
+        if (m_bRTL)
+        {
+            return rFramePos.X() <= m_aFramePixel.Left() ? WindowHitTest::Inside
+                                                         : WindowHitTest::Transparent;
+        }
         return rFramePos.X() >= m_aFramePixel.Right() ? WindowHitTest::Inside
                                                       : WindowHitTest::Transparent;
     }
