sw/source/core/crsr/viscrs.cxx
@@ -637,6 +637,7 @@ void SwSelPaintRects::HighlightContentControl()
     std::vector<OString> aLOKRectangles;
     SwRect aFirstPortionPaintArea;
     SwRect aLastPortionPaintArea;
+    bool bRTL = false;
     std::shared_ptr<SwContentControl> pContentControl;
 
     if (m_bShowContentControlOverlay)
@@ -683,6 +684,15 @@ void SwSelPaintRects::HighlightContentControl()
                 aLastPortionPaintArea = (*pRects)[pRects->size() - 1];
             }
             pContentControl = pCurContentControlAtCursor->GetContentControl().GetContentControl();
+
+            // The layout knows if the text node is RTL (either set directly, or inherited from the
+            // environment).
+            SwIterator<SwTextFrame, SwTextNode, sw::IteratorMode::UnwrapMulti> aFrames(*pTextNode);
+            SwTextFrame* pFrame = aFrames.First();
+            if (pFrame)
+            {
+                bRTL = pFrame->IsRightToLeft();
+            }
         }
     }
 
@@ -756,7 +766,15 @@ void SwSelPaintRects::HighlightContentControl()
                     m_pContentControlButton = VclPtr<SwDropDownContentControlButton>::Create(
                         &rEditWin, pContentControl);
                 }
-                m_pContentControlButton->CalcPosAndSize(aLastPortionPaintArea);
+                m_pContentControlButton->SetRTL(bRTL);
+                if (bRTL)
+                {
+                    m_pContentControlButton->CalcPosAndSize(aFirstPortionPaintArea);
+                }
+                else
+                {
+                    m_pContentControlButton->CalcPosAndSize(aLastPortionPaintArea);
+                }
                 m_pContentControlButton->Show();
             }
         }
